Final commit for Lab2 assignment.