@@ -1,7 +1,6 @@
 package chapter9;
 
 import java.util.ArrayList;
-import java.util.EmptyStackException;
 
 public class ArrayListStack<T> implements Stack<T> {
 
@@ -18,20 +17,16 @@ public class ArrayListStack<T> implements Stack<T> {
 
     @Override
     public T pop() throws Exception {
-        // TODO
-        if (isEmpty()) {
-            throw new EmptyStackException();
-        }
-        return data.removeLast();
+        if (isEmpty())
+            throw new Exception("Stack is empty");
+        return data.remove(data.size() - 1);
     }
 
     @Override
     public T top() throws Exception {
-        // TODO
-        if (isEmpty()) {
-            throw new EmptyStackException();
-        }
-        return data.getLast();
+        if (isEmpty())
+            throw new Exception("Stack is empty");
+        return data.get(data.size() - 1);
     }
 
     @Override
